add-message="添加日志，修复分页查询bug"

--- a/OAuth-ResourceServer/src/main/resources/application-dev.yml
+++ b/OAuth-ResourceServer/src/main/resources/application-dev.yml
@@ -34,3 +34,10 @@ server:
   port: 10085
   servlet:
     context-path: /api
+#  指定日志级别 把springboot的所有日志修改成为debug
+logging:
+  level:
+    root: info
+  config: classpath:logback.xml
+  file:
+    path: logs
