--- a/OAuth-ResourceServer/pom.xml
+++ b/OAuth-ResourceServer/pom.xml
@@ -15,6 +15,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.googlecode.log4jdbc</groupId>
+            <artifactId>log4jdbc</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
