--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <spring-boot.version>2.6.13</spring-boot.version>
+    <spring-boot.version>2.6.12</spring-boot.version>
     <swagger-fox.version>3.0.0</swagger-fox.version>
     <slf4j.version>2.0.6</slf4j.version>
   </properties>
@@ -39,6 +39,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-oauth2-authorization-server</artifactId>
+      <version>0.4.3</version>
+    </dependency>
   </dependencies>
 
 
@@ -51,6 +56,12 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-security</artifactId>
+        <version>3.1.2</version>
+      </dependency>
+
       <dependency>
         <groupId>io.springfox</groupId>
         <artifactId>springfox-boot-starter</artifactId>
