--- a/OAuth-ResourceServer/src/main/resources/application-dev.yml
+++ b/OAuth-ResourceServer/src/main/resources/application-dev.yml
@@ -35,6 +35,9 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8081
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 server:
   port: 8082
   servlet:
