--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>OAuth-ResourceServer</module>
     <module>AuthorizationServer</module>
     <module>OAuth-Common</module>
+      <module>OAuth-Login</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -19,7 +20,7 @@
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <spring-boot.version>2.6.12</spring-boot.version>
+    <spring-boot.version>2.7.0</spring-boot.version>
     <swagger-fox.version>3.0.0</swagger-fox.version>
     <slf4j.version>2.0.6</slf4j.version>
   </properties>
