--- a/AuthorizationServer/pom.xml
+++ b/AuthorizationServer/pom.xml
@@ -86,6 +86,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.wojucai</groupId>
+            <artifactId>OAuth-Common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
