update-message="更新客户端可以通过admin的AccessToken去访问数据"。 fix-bug="修复feign解析分页数据时出现的BUG" restore-message="恢复JAVA8的版本"

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /OAuth-Common/target/
 /OAuth-ResourceServer/target/
 /AuthorizationServer/target
+/AuthorizationServer/logs
 /.idea
 /oauth-vue/node_modules
 /logs
