--- a/OAuth-Client/pom.xml
+++ b/OAuth-Client/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>OAuth-Common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.21</version>
+        </dependency>
     </dependencies>
 
 </project>
