--- a/AuthorizationServer/pom.xml
+++ b/AuthorizationServer/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>AuthorizonServer</artifactId>
+    <artifactId>AuthorizationServer</artifactId>
 
 
     <dependencies>
